@@ -15,6 +15,8 @@
 		<commons-collections.version>3.2.1</commons-collections.version>
 		<commons-fileupload.version>1.2</commons-fileupload.version>
 		<commons-io.version>2.4</commons-io.version>
+		<commons-logging.version>1.1.1</commons-logging.version>
+		<guava.version>15.0</guava.version>
 		<gzip.filter>1.7</gzip.filter>
 		<hibernate-validator.version>5.0.1.Final</hibernate-validator.version>
 		<jackson.version>1.9.13</jackson.version>
@@ -33,6 +35,13 @@
 		<synapse.version>2013-12-07-82a25cd-866</synapse.version>
 		<tomcat.version>7.0.32</tomcat.version>
 		<wro4j.version>1.6.3</wro4j.version>
+		
+		<tomcat7-maven-plugin.version>2.0</tomcat7-maven-plugin.version>
+		<maven-failsafe-plugin.version>2.6</maven-failsafe-plugin.version>
+		<jacoco-maven-plugin.version>0.6.4.201312101107</jacoco-maven-plugin.version>
+		<cargo-maven2-plugin.version>1.3.1</cargo-maven2-plugin.version>
+		<maven-war-plugin.version>2.4</maven-war-plugin.version>
+		<maven-failsafe-plugin.version>2.6</maven-failsafe-plugin.version>
 	</properties>
 	
 	<repositories>
@@ -287,7 +296,7 @@
 		<dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>15.0</version>
+            <version>${guava.version}</version>
         </dependency>
 		
 		<!-- TEST -->
@@ -324,7 +333,7 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version>
+			<version>${commons-logging.version}</version>
 		</dependency>		
 		
 	</dependencies>
@@ -348,7 +357,7 @@
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.0</version>
+				<version>${tomcat7-maven-plugin.version}</version>
 				<configuration>
 					<port>8888</port>
 				</configuration>
@@ -359,7 +368,7 @@
 			-->
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.6</version>
+				<version>${maven-failsafe-plugin.version}</version>
 				<configuration>
 					<skipITs>true</skipITs>
 				</configuration>
@@ -382,7 +391,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
+				<version>${maven-war-plugin.version}</version>
 				<configuration>
 					<webResources>
 						<resource>
@@ -403,7 +412,7 @@
 					<plugin>
 						<groupId>org.apache.tomcat.maven</groupId>
 						<artifactId>tomcat7-maven-plugin</artifactId>
-						<version>2.0</version>
+						<version>${tomcat7-maven-plugin.version}</version>
 						<configuration>
 							<port>8888</port>
 							<systemProperties>
@@ -413,7 +422,7 @@
 					</plugin>
 					<plugin>
 						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>2.6</version>
+						<version>${maven-failsafe-plugin.version}</version>
 						<configuration>
 							<skipITs>false</skipITs>
 							<!-- 
@@ -423,67 +432,83 @@
 							 -->
 						</configuration>
 					</plugin>
-					<plugin>
-						<groupId>org.codehaus.cargo</groupId>
-						<artifactId>cargo-maven2-plugin</artifactId>
-						<version>1.3.1</version>
-						<configuration>
-							<wait>false</wait>
-							<container>
-								<timeout>360000</timeout>
-								<containerId>tomcat7x</containerId>
-								<zipUrlInstaller>
-									<url>http://sagebionetworks.artifactoryonline.com/sagebionetworks/libs-releases-local/apache-tomcat/apache-tomcat/${tomcat.version}/apache-tomcat-${tomcat.version}.zip</url>
-									<extractDir>${project.build.directory}/tomcat7x/container</extractDir>
-								</zipUrlInstaller>
-								<systemProperties>
-									<org.sagebionetworks.stackEncryptionKey>${org.sagebionetworks.stackEncryptionKey}</org.sagebionetworks.stackEncryptionKey>
-									<org.sagebionetworks.stack.configuration.url>${org.sagebionetworks.stack.configuration.url}</org.sagebionetworks.stack.configuration.url>
-									<org.sagebionetworks.stack>${org.sagebionetworks.stack}</org.sagebionetworks.stack>
-									<org.sagebionetworks.stack.instance>${org.sagebionetworks.stack.instance}</org.sagebionetworks.stack.instance>
-									<org.sagebionetworks.stack.iam.id>${org.sagebionetworks.stack.iam.id}</org.sagebionetworks.stack.iam.id>
-									<org.sagebionetworks.stack.iam.key>${org.sagebionetworks.stack.iam.key}</org.sagebionetworks.stack.iam.key>
-									<org.sagebionetworks.rest.api.endpoint>${tomcat.endpoint}/${org.sagebionetworks.repository.context}</org.sagebionetworks.rest.api.endpoint>
-									<bridge-app-context>classpath:test-bridge-webapp-application-context.spb.xml</bridge-app-context>
-								</systemProperties>
-							</container>
-							<configuration>
-								<properties>
-									<cargo.jvmargs>-Xmx2g -Xms128m -XX:MaxPermSize=850m</cargo.jvmargs>
-									<cargo.servlet.port>8888</cargo.servlet.port>
-									<cargo.tomcat.ajp.port>8889</cargo.tomcat.ajp.port>
-								</properties>
-							</configuration>
-							<type>standalone</type>
-							<home>${project.build.directory}/tomcat7x/container/apache-tomcat-${tomcat.version}/bin</home>
-							<deployables>
-								<deployable>
-									<groupId>org.sagebionetworks.bridge</groupId>
-									<artifactId>bridge</artifactId>
-									<type>war</type>
-								</deployable>
-							</deployables>
-							<packager>
-								<outputLocation>${project.build.directory}/tomcat-packaged</outputLocation>
-							</packager>
-						</configuration>
-						<executions>
-							<execution>
-								<id>start-container</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>start</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>stop-container</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>stop</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
+			        <plugin>
+			            <groupId>org.jacoco</groupId>
+			            <artifactId>jacoco-maven-plugin</artifactId>
+			            <version>${jacoco-maven-plugin.version}</version>
+			            <executions>
+			                <execution>
+			                    <id>prep-agent</id>
+			                    <phase>pre-integration-test</phase>
+			                    <goals>
+			                        <goal>prepare-agent-integration</goal>
+			                    </goals>
+			                    <configuration>
+			                        <destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>
+			                        <propertyName>surefireArgLine</propertyName>
+			                    </configuration>
+			                </execution>
+			                <execution>
+			                    <id>report</id>
+			                    <phase>verify</phase>
+			                    <goals>
+			                        <goal>report-integration</goal>
+			                    </goals>
+			                    <configuration>
+			                        <dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>
+			                        <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+			                    </configuration>
+			                </execution>
+			            </executions>
+			        </plugin>			 
+		            <plugin>
+		                <groupId>org.codehaus.cargo</groupId>
+		                <artifactId>cargo-maven2-plugin</artifactId>
+		                <version>${cargo-maven2-plugin.version}</version>
+		                <configuration>
+		                    <container>
+		                        <containerId>tomcat7x</containerId>
+		                        <zipUrlInstaller>
+		                            <url>http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.6/bin/apache-tomcat-7.0.6.zip</url>
+		                        </zipUrlInstaller>
+		                        <systemProperties>
+		                            <org.sagebionetworks.stackEncryptionKey>${org.sagebionetworks.stackEncryptionKey}</org.sagebionetworks.stackEncryptionKey>
+		                            <org.sagebionetworks.stack.configuration.url>${org.sagebionetworks.stack.configuration.url}</org.sagebionetworks.stack.configuration.url>
+		                            <org.sagebionetworks.stack>${org.sagebionetworks.stack}</org.sagebionetworks.stack>
+		                            <org.sagebionetworks.stack.instance>${org.sagebionetworks.stack.instance}</org.sagebionetworks.stack.instance>
+		                            <org.sagebionetworks.stack.iam.id>${org.sagebionetworks.stack.iam.id}</org.sagebionetworks.stack.iam.id>
+		                            <org.sagebionetworks.stack.iam.key>${org.sagebionetworks.stack.iam.key}</org.sagebionetworks.stack.iam.key>
+		                            <org.sagebionetworks.rest.api.endpoint>${tomcat.endpoint}/${org.sagebionetworks.repository.context}</org.sagebionetworks.rest.api.endpoint>
+		                            <bridge-app-context>classpath:test-bridge-webapp-application-context.spb.xml</bridge-app-context>
+		                        </systemProperties>                        
+		                    </container>
+		                    <configuration>
+		                        <properties>
+		                            <cargo.servlet.port>8888</cargo.servlet.port>
+		                            <cargo.tomcat.ajp.port>8889</cargo.tomcat.ajp.port>
+		                            <cargo.jvmargs>${surefireArgLine}</cargo.jvmargs>
+		                        </properties>
+		                    </configuration>
+		                </configuration>
+		                <executions>
+		                    <!-- start server before integration tests -->
+		                    <execution>
+		                        <id>start-container</id>
+		                        <phase>pre-integration-test</phase>
+		                        <goals>
+		                            <goal>start</goal>
+		                        </goals>
+		                    </execution>
+		                    <!-- stop server after integration tests -->
+		                    <execution>
+		                        <id>stop-container</id>
+		                        <phase>post-integration-test</phase>
+		                        <goals>
+		                            <goal>stop</goal>
+		                        </goals>
+		                    </execution>
+		                </executions>
+		            </plugin>					 
 				</plugins>
 			</build>
 		</profile>
